feat: simple validations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,5 @@
 		"quickfix.biome": "explicit",
 		"source.organizeImports.biome": "explicit"
 	},
-	"cSpell.words": ["Lexi"]
+	"cSpell.words": ["Lexi", "picklist", "valibot"]
 }
