--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"dev": "DEBUG='*' tsx watch bin/server.ts",
 		"test": "jest --watch",
 		"test:ci": "jest"
 	},
@@ -18,15 +19,21 @@
 		"@aws-sdk/client-dynamodb": "^3.767.0",
 		"@biomejs/biome": "^1.9.4",
 		"@types/big.js": "^6.2.2",
+		"@types/debug": "^4.1.12",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.13.10",
+		"debug": "^4.4.0",
 		"jest": "^29.7.0",
 		"ts-jest": "^29.2.6",
+		"tsx": "^4.19.3",
 		"typescript": "^5.8.2"
 	},
 	"dependencies": {
+		"@hono/node-server": "^1.14.0",
+		"@hono/valibot-validator": "^0.5.2",
 		"abstract-level": "^2.0.1",
 		"big.js": "^6.2.2",
+		"hono": "^4.7.5",
 		"level": "^9.0.0",
 		"lock": "^1.1.0",
 		"memory-level": "^2.0.0",
