--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
 		"@types/debug": "^4.1.12",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.13.10",
+		"@types/supertest": "^6.0.3",
 		"debug": "^4.4.0",
+		"dynalite": "^3.2.2",
 		"jest": "^29.7.0",
+		"supertest": "^7.1.0",
 		"ts-jest": "^29.2.6",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.2"
@@ -37,7 +40,6 @@
 		"big.js": "^6.2.2",
 		"hono": "^4.7.5",
 		"level": "^9.0.0",
-		"lock": "^1.1.0",
 		"memory-level": "^2.0.0",
 		"valibot": "^1.0.0"
 	}
