--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"lint": "pnpm biome check .",
 		"test": "jest --watch",
 		"test:ci": "jest",
+		"test:unit": "jest --selectProjects unit --watch",
+		"test:dynamodb-local": "jest --selectProjects dynamodb-local --watch",
 		"check": "pnpm run '/(lint|type-check)/'",
 		"prepare": "husky"
 	},
@@ -33,17 +35,16 @@
 	"devDependencies": {
 		"@aws-sdk/client-dynamodb": "^3.767.0",
 		"@biomejs/biome": "^1.9.4",
+		"@shelf/jest-dynamodb": "^3.5.0",
 		"@types/async-lock": "^1.4.2",
 		"@types/big.js": "^6.2.2",
 		"@types/debug": "^4.1.12",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.13.10",
-		"@types/supertest": "^6.0.3",
 		"debug": "^4.4.0",
 		"dynalite": "^3.2.2",
 		"husky": "^9.1.7",
 		"jest": "^29.7.0",
-		"supertest": "^7.1.0",
 		"ts-jest": "^29.2.6",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.2"
