--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
 		"@types/big.js": "^6.2.2",
 		"@types/debug": "^4.1.12",
 		"@types/jest": "^29.5.14",
+		"@types/lodash.merge": "^4.6.9",
 		"@types/node": "^22.13.10",
 		"debug": "^4.4.0",
-		"dynalite": "^3.2.2",
 		"husky": "^9.1.7",
 		"jest": "^29.7.0",
+		"lodash.merge": "^4.6.2",
 		"ts-jest": "^29.2.6",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.2"
