chore: rename dynamodb-local to ddblocal in configuration and scripts
This commit updates the Jest configuration and package.json scripts to rename the testing project from 'dynamodb-local' to 'ddblocal'. The README.md is also updated to reflect this change in naming for consistency.

--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
 		"dev": "DEBUG='*' tsx watch bin/server.ts",
 		"type-check": "tsc --noEmit",
 		"lint": "pnpm biome check .",
-		"test": "jest --watch",
-		"test:ci": "jest",
-		"test:unit": "jest --selectProjects unit --watch",
-		"test:dynamodb-local": "jest --selectProjects dynamodb-local --watch",
-		"test:dylite": "jest --selectProjects dylite --watch",
+		"test:unit": "jest --selectProjects unit",
+		"test:ddblocal": "jest --selectProjects ddblocal",
+		"test:dylite": "jest --selectProjects dylite",
 		"check": "pnpm run '/(lint|type-check)/'",
 		"prepare": "husky"
 	},
