--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
 	"files": {
-		"ignore": []
+		"ignore": ["./lib/expression-parser/*"]
 	},
 	"organizeImports": {
 		"enabled": true
