--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"build": "for file in ./lib/expression-parser/*.pegjs; do peggy \"$file\" --dts --return-types='{}'; done",
 		"dev": "DEBUG='*' tsx watch bin/server.ts",
 		"type-check": "tsc --noEmit",
 		"lint": "pnpm biome check .",
@@ -48,6 +49,7 @@
 		"jest": "^29.7.0",
 		"jest-environment-node": "^29.7.0",
 		"lodash.merge": "^4.6.2",
+		"peggy": "^5.0.4",
 		"ts-jest": "^29.2.6",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.2"
